--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
     <div class=" container row" id="animalbuttons">
 
     </div>
-    <div class="row">
+    <div >
+        
+        <form class="col-md-offset-9 col-md-3 col-xs-offset-9 col-sm-3 col-xs-offset-5 col-xs-6" action="" id="animalform">
+            <label class="col-md-12 col-sm-12 col-xs-12" for="animal-input">Add an animal</label><br>
+            <input class="animal-input col-md-11 col-sm-12 col-xs-12" type="text" name="animalName" id ="animal-input"></br>
+            <input class="col-md-6  col-sm-6 col-xs-8 btn btn-success" id="addAnimal" type="submit" value="submit">
+        </form> 
 
-        <div class="col-md-9 col-sm-9 col-xs-9" id="animals">
+        <div class="col-md-9  col-sm-12 col-xs-12 " id="animals">
 
         </div>
 
-        <form class="col-md-3 col-sm-3 col-xs-3" action="" id="animalform">
-            <label class="col-md-12 col-sm-12 col-xs-12" for="animal-input">Add an animal</label><br>
-            <input class="animal-input col-md-11 col-sm-12 col-xs-12" type="text" name="animalName" id ="animal-input"></br>
-            <input class="col-md-6  col-sm-6 col-xs-10 btn btn-success" id="addAnimal" type="submit" value="submit">
-        </form> 
 
         
 
